@@ -13,6 +13,7 @@
 require(RcppGSL)
 prettyVersion <- packageDescription("RcppGSL")$Version
 prettyDate <- format(Sys.Date(), "%B %e, %Y")
+library(RUnit)
 @
 
 \usepackage[colorlinks]{hyperref}
@@ -23,35 +24,30 @@ prettyDate <- format(Sys.Date(), "%B %e, %Y")
 \begin{document}
 \maketitle
 
+\section*{Test Execution}
 
 <<unitTesting,echo=FALSE,print=FALSE>>=
-library(inline)
-library(RUnit)
-
 pkg <- "RcppGSL"
-cppfunction <- function(...) cxxfunction(..., plugin=pkg)
-
 if (file.exists("unitTests-results")) unlink("unitTests-results", recursive = TRUE)
 dir.create("unitTests-results")
-
 path <- system.file("unitTests", package=pkg)
-
 testSuite <- defineTestSuite(name=paste(pkg, "unit testing"), dirs=path)
-tests <- runTestSuite(testSuite, verbose=FALSE)
+tests <- runTestSuite(testSuite)
 err <- getErrors(tests)
-
 if (err$nFail > 0) stop(sprintf("unit test problems: %d failures", err$nFail))
 if (err$nErr > 0) stop( sprintf("unit test problems: %d errors", err$nErr))
-
 printHTMLProtocol(tests, fileName= sprintf("unitTests-results/%s-unitTests.html", pkg))
 printTextProtocol(tests, fileName= sprintf("unitTests-results/%s-unitTests.txt" , pkg))
 
 if (file.exists("/tmp")) {
-    invisible(file.copy(sprintf("unitTests-results/%s-unitTests.txt", pkg), "/tmp", overwrite=TRUE))
-    invisible(file.copy(sprintf("unitTests-results/%s-unitTests.html", pkg), "/tmp", overwrite=TRUE))
+    invisible(sapply(c("txt", "html"), function(ext) {
+        fname <- sprintf("unitTests-results/%s-unitTests.%s", pkg, ext)
+        file.copy(fname, "/tmp", overwrite=TRUE)
+    }))
 }
 @
 
+\section*{Test Results}
 
 \begin{verbatim}
 <<importResults,echo=FALSE,results=tex>>=
